@@ -1,3 +1,8 @@
+2010-06-24  Kevin Buettner  <kevinb@redhat.com>
+
+	* gdb-if.c (trace.h): Include.
+	(reg_size, sim_fetch_register): Add cases for sim_rx_acc_regnum.
+
 2010-06-07  Nick Clifton  <nickc@redhat.com>
 
 	* reg.c (set_oszc): Use unsigned int for the mask.
